# cpp-boilerplate-v2

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  problem9_4.cpp  problem9_5.cpp
include/: lib.hpp
libs/lib2/: src.cpp
test/: test.cpp
